fix: change method to retrieve the first available parking spot